--- a/lecture/lecture.tex
+++ b/lecture/lecture.tex
@@ -27,15 +27,16 @@
     \setbeamertemplate{section in toc shaded}[default][50]
     \setbeamertemplate{subsection in toc shaded}[default][50]
     % Title page
-    \title{Title}
-    \subtitle{MSc Econometrics}
+    \title{Differential Equations}
+    \subtitle{Master's degree in economics}
     \author[JR]{Jhon Roly Ordoñez Leon}
+    \date{\today}
     \institute{
         National University of San Cristóbal de Huamanga\\
         Faculty of Economic, Administrative and Accounting Sciences\\
         Professional School of Economics
     }
-    \date{\today}
+    \titlegraphic{ \hfill \includegraphics[scale=0.3]{img/logo_julia.png}}
 % Body
 \begin{document}
 	% Title
@@ -46,27 +47,29 @@
 	\begin{frame}{Outline}
 		\tableofcontents
 	\end{frame}
-
 	% Section 1
-	\section{}
-		\begin{frame}{}
+	\section{Introduction to Differential Equations}
+		\begin{frame}{Definition of a Differential Equation}
 			\lipsum[1]
 		\end{frame}
-		% Subsection 1.1.
-		\subsection{dfsdsds}
+		\begin{frame}{Types of Differential Equations}
+			\lipsum[1]
+		\end{frame}
+		
 	% Section 2
-	\section{}
-        \begin{frame}{}
+	\section{First-Order Ordinary Differential Equations (ODEs)}
+        \begin{frame}{Separable Equations}
             \lipsum[2]
         \end{frame}
-
+		\begin{frame}{Linear Equations}
+			\lipsum[2]
+		\end{frame}
+	
     % References and bibliography
     \begin{frame}[t,allowframebreaks]{Bibliography}
 		 \bibliography{main.bib}
 		 	\bibliographystyle{apalike}
-		 	%\bibliographystyle{alpha}
-                \nocite{wooldridge-2016}
-		 		%\nocite{}
+		 		\nocite{zill-2012}
 	\end{frame}
 	% Title
 	\begin{frame}[t]
