--- a/lecture/main.bib
+++ b/lecture/main.bib
@@ -1,13 +1,9 @@
 %! Author = PC
 %! Date = 9/11/2023
 
-
-@book{wooldridge-2016,
-  title={Introductory econometrics: Asia pacific edition with online study tools 12 months},
-  author={Wooldridge, Jeffrey M and Wadud, Mokhtarul and Lye, Jenny},
-  year={2016},
-  publisher={Cengage AU}
+@book{zill-2012,
+	title={A first course in differential equations with modeling applications},
+	author={Zill, Dennis G},
+	year={2012},
+	publisher={Cengage Learning}
 }
-
-
-
