--- a/lecture_notes/lecture_notes.tex
+++ b/lecture_notes/lecture_notes.tex
@@ -29,8 +29,8 @@
 	% Header and footer
 	\pagestyle{fancy}
 	\fancyhf{}
-	\lhead{MSc Econometrics}
-	\chead{Lecture Notes xyz}
+	\lhead{Master’s degree in economics}
+	\chead{Lecture Notes}
 	\rhead{Jhon R. Ordoñez}
 	\rfoot{Page \thepage}
 % Body
@@ -41,7 +41,7 @@
 		% Title
 		{\Large
 			\begin{center}
-				{\Huge \textbf{OPTIMAL CONTROL THEORY}}
+				{\Huge \textbf{DIFFERENTIAL EQUATIONS}}
 				\vspace{0.5cm}\\
 				% Name
 				Jhon Roly Ordoñez Leon\\
@@ -63,24 +63,126 @@
 	\end{titlepage}
 
 	% Section 1
-	\section{Introduction}
+	\section{Introduction to Differential Equations}
 		\lipsum[1]
-
-
-
-
+		% Subsection 1
+		\subsection{Definition of a Differential Equation}
+			\lipsum[1]
+		% Subsection 2
+		\subsection{Types of Differential Equations}
+			\lipsum[1]
+			% Subsubsection 2.1
+			\subsubsection{Ordinary Differential Equations (ODEs)}
+				\lipsum[1]
+			% Subsubsection 2.2
+			\subsubsection{Partial Differential Equations (PDEs)}
+				\lipsum[1]
 	% Section 2
-	\section{}
+	\section{First-Order Ordinary Differential Equations (ODEs)}
 		\lipsum[1]
-
-
-
+		% Subsection 1
+		\subsection{Separable Equations}
+			\lipsum[1]
+		% Subsection 2
+		\subsection{Linear Equations}
+			\lipsum[1]
+		% Subsection 3
+		\subsection{Exact Equations}
+			\lipsum[1]
+		% Subsection 4
+		\subsection{Integrating Factors}
+			\lipsum[1]
+		% Subsection 5
+		\subsection{Modeling with First-Order ODEs}
+			\lipsum[1]
+	% Section 3
+	\section{Second-Order Ordinary Differential Equations (ODEs)}
+		\lipsum[1]
+		% Subsection 1
+		\subsection{Homogeneous Linear ODEs with Constant Coefficients}
+			\lipsum[1]
+		% Subsection 2
+		\subsection{Non-homogeneous Linear ODEs with Constant Coefficients}
+			\lipsum[1]
+		% Subsection 3
+		\subsection{Undetermined Coefficients}
+			\lipsum[1]
+		% Subsection 4
+		\subsection{Variation of Parameters}
+			\lipsum[1]
+		% Subsection 5
+		\subsection{Modeling with Second-Order ODEs}
+			\lipsum[1]
+	% Section 4
+	\section{Systems of Ordinary Differential Equations}
+		\lipsum[1]
+		% Subsection 1
+		\subsection{Introduction to Systems}
+			\lipsum[1]
+		% Subsection 2
+		\subsection{Linear Systems}
+			\lipsum[1]
+			% Subsubsection 2.1
+			\subsubsection{Homogeneous Systems}
+				\lipsum[1]
+			% Subsubsection 2.2
+			\subsubsection{Non-homogeneous Systems}
+				\lipsum[1]
+		% Subsection 3
+		\subsection{Phase Plane Analysis}
+			\lipsum[1]
+		% Subsection 4
+		\subsection{Modeling with Systems of ODEs}
+			\lipsum[1]
+	% Section 5
+	\section{Laplace Transform}
+		\lipsum[1]
+		%A. Definition and Properties
+		%B. Solving ODEs with Laplace Transform
+		%C. Inverse Laplace Transform
+		%D. Application to Initial Value Problems
+	% Section 6
+	\section{Fourier Series and Partial Differential Equations (PDEs)}
+		\lipsum[1]
+		%A. Fourier Series
+		%B. Heat Equation
+		%C. Wave Equation
+		%D. Laplace's Equation
+		%E. Separation of Variables
+	% Section 7
+	\section{Numerical Methods for Solving Differential Equations}
+		\lipsum[1]
+		%A. Euler's Method
+		%B. Runge-Kutta Methods
+		%C. Finite Difference Methods
+		%D. Introduction to Finite Element Methods
+	% Section 8
+	\section{Stability and Bifurcation}
+		\lipsum[1]
+		%A. Stability of Equilibria
+		%B. Bifurcation Analysis
+		%C. Applications to Dynamical Systems
+	% Section 9
+	\section{Introduction to Nonlinear Differential Equations}
+		\lipsum[1]
+		%A. Nonlinear ODEs
+		%B. Nonlinear Systems
+		%C. Chaos and Nonlinear Dynamics
+	% Section 10
+	\section{Applications of Differential Equations}
+		\lipsum[1]
+		%A. Physics and Engineering Applications
+		%B. Biological and Population Dynamics
+		%C. Economics and Finance
+	% Section 11
+	\section{Conclusion}
+		\lipsum[1]	
+		%A. Recap of Key Concepts
+		%B. Further Areas of Study
 	% References and bibliography
 	\bibliography{main.bib}
 		\bibliographystyle{apalike2}
-
-		\nocite{wooldridge-2016}
-
+			\nocite{zill-2012}
     %\bibliography{main}
     %\bibliographystyle{plain}
 \end{document}
