--- a/lecture/lecture.tex
+++ b/lecture/lecture.tex
@@ -1,6 +1,3 @@
-%! Author = PC
-%! Date = 11/11/2023
-
 % Preamble
 \documentclass[aspectratio=169]{beamer}
     % Import packages
@@ -32,7 +29,7 @@
     \author[JR]{Jhon Roly Ordoñez Leon}
     \date{\today}
     \institute{
-        National University of San Cristóbal de Huamanga\\
+        National University of Peru\\
         Faculty of Economic, Administrative and Accounting Sciences\\
         Professional School of Economics
     }
@@ -64,7 +61,6 @@
 		\begin{frame}{Linear Equations}
 			\lipsum[2]
 		\end{frame}
-	
     % References and bibliography
     \begin{frame}[t,allowframebreaks]{Bibliography}
 		 \bibliography{main.bib}
