--- a/lecture/lecture.tex
+++ b/lecture/lecture.tex
@@ -7,7 +7,7 @@
     \usepackage{xcolor}
     \usepackage{graphicx}
     \usepackage{lipsum}
-    \usepackage[spanish]{babel}
+    \usepackage[english]{babel}
     % Beamer theme customization
     \usetheme{metropolis}
     \setbeamertemplate{frame numbering}[fraction]
